Marcus Moeller fixed some layout bugs I introduced

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -630,6 +630,13 @@ address .poweredby {
     line-height: 1.36em;
 }
 
+.profile, .application, #content .peopletag {
+    position:relative;
+    clear:both;
+    float:left;
+    width:100%;
+}
+
 .application, #content .peopletag {
     position:relative;
     clear:both;
